@@ -1,5 +1,9 @@
 2006-03-09  Danilo Šegan  <danilo@gnome.org>
 
+	* releases.py (Releases.list_modules): Add percentages for single domains.
+
+2006-03-09  Danilo Šegan  <danilo@gnome.org>
+
 	* releases.py:
 	* templates/language-release-doc-stats-modules.tmpl: 
 	* templates/language-release-ui-stats-modules.tmpl: 
